@@ -3,6 +3,8 @@ Release date: March 3, 2022
 * Enhancement: Team Member, Team Member Carousel - Added button style option for social links
 * Enhancement: Team Member Carousel - Add links for Flickr, Tumblr, Github and Vimeo
 * Enhancement: Flip Box - Added dynamic tags support for title, description and icon image options
+* Enhancement: Instagram Feed - Added option again to the widget for adding custom access token
+* Enhancement: Instagram Feed - Added pause on hover option in swiper slider widgets
 
 == 2.6.9 ==
 Release date: February 7, 2022
